--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/vue3": "^6.1.17",
     "@popperjs/core": "2.10.2",
+    "axios": "^1.10.0",
     "bootstrap": "5.1.3",
     "chart.js": "3.6.0",
     "core-js": "3.6.5",
@@ -41,12 +46,12 @@
     "@vue/compiler-sfc": "3.2.0",
     "@vue/eslint-config-prettier": "6.0.0",
     "babel-eslint": "10.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "6.7.2",
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-vue": "7.0.0",
     "prettier": "2.2.1",
     "sass": "1.43.3",
-    "sass-loader": "10.1.1",
-    "cross-env": "^7.0.3"
+    "sass-loader": "10.1.1"
   }
 }
