--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,10 @@
     "chart.js": "3.6.0",
     "core-js": "3.6.5",
     "jkanban": "^1.3.1",
+    "qrcode-vue": "^1.2.0",
+    "qrcode.vue": "^3.6.0",
     "vue": "3.2.0",
+    "vue-barcode-reader": "^1.0.3",
     "vue-flatpickr-component": "9.0.5",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2"
